Added UserTypes and Edited Razor View Pages for Login and Register

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,6 +13,16 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Input.FN"></label>
+                <input asp-for="Input.FN" class="form-control" />
+                <span asp-validation-for="Input.FN" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.LN"></label>
+                <input asp-for="Input.LN" class="form-control" />
+                <span asp-validation-for="Input.LN" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
@@ -26,6 +36,11 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Type"></label>
+                <select asp-for="Input.Type" class="form-control" asp-items="Html.GetEnumSelectList<FinalProjectENTPROG.Models.UserTypes>()"></select>
+                <span asp-validation-for="Input.Type" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
