--- a/Views/Schedule/Create.cshtml
+++ b/Views/Schedule/Create.cshtml
@@ -13,29 +13,14 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Admin" class="control-label"></label>
-                <input asp-for="Admin" class="form-control" />
-                <span asp-validation-for="Admin" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ScheduledUser" class="control-label"></label>
-                <input asp-for="ScheduledUser" class="form-control" />
-                <span asp-validation-for="ScheduledUser" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Location" class="control-label"></label>
-                <select asp-for="Location" class="form-control"></select>
+                <select asp-for="Location" class="form-control" asp-items="Html.GetEnumSelectList<FinalProjectENTPROG.Models.Location>()"></select>
                 <span asp-validation-for="Location" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Slots" class="control-label"></label>
-                <input asp-for="Slots" class="form-control" />
-                <span asp-validation-for="Slots" class="text-danger"></span>
+                <label asp-for="Municipality" class="control-label"></label>
+                <select asp-for="Municipality" class="form-control" asp-items="Html.GetEnumSelectList<FinalProjectENTPROG.Models.Municipality>()"></select>
+                <span asp-validation-for="Municipality" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
