--- a/Views/Schedule/Edit.cshtml
+++ b/Views/Schedule/Edit.cshtml
@@ -25,8 +25,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Location" class="control-label"></label>
-                <select asp-for="Location" class="form-control"></select>
+                <select asp-for="Location" class="form-control" asp-items="Html.GetEnumSelectList<FinalProjectENTPROG.Models.Location>()"></select>
                 <span asp-validation-for="Location" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Municipality" class="control-label"></label>
+                <select asp-for="Municipality" class="form-control" asp-items="Html.GetEnumSelectList<FinalProjectENTPROG.Models.Municipality>()"></select>
+                <span asp-validation-for="Municipality" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
