--- a/Views/Schedule/Index.cshtml
+++ b/Views/Schedule/Index.cshtml
@@ -22,6 +22,9 @@
                 @Html.DisplayNameFor(model => model.Location)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Municipality)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Date)
             </th>
             <th>
@@ -42,6 +45,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Location)
             </td>
+            <th>
+                @Html.DisplayNameFor(model => model.Municipality)
+            </th>
             <td>
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
