Changes to Controllers Login and UI

--- a/Views/Schedule/Index.cshtml
+++ b/Views/Schedule/Index.cshtml
@@ -1,5 +1,11 @@
 ﻿@model IEnumerable<FinalProjectENTPROG.Models.Schedule>
 
+@using Microsoft.AspNetCore.Identity
+@using FinalProjectENTPROG.Models
+
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
 @{
     ViewData["Title"] = "Index";
 }
@@ -16,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.Admin)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ScheduledUser)
+                @Html.DisplayNameFor(model => model.ScheduledUser.Id)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Location)
@@ -34,32 +40,33 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Admin)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScheduledUser)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Location)
-            </td>
-            <th>
-                @Html.DisplayNameFor(model => model.Municipality)
-            </th>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Slots)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ScheduleID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ScheduleID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ScheduleID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Admin)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ScheduledUser)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Location)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Municipality)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Slots)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ScheduleID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ScheduleID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ScheduleID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
