Changes to Schedule.cs and ScheduleController for index and create

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -56,9 +56,9 @@
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
                 {
                     <div>
-                        <h5>
-                            Use xxx to find a location near you.
-                        </h5>
+                                    <h5>
+                                        Use entprog-vaccinationqueue.azurewebsites.net to find a location near you.
+                                    </h5>
                     </div>
                 }
                 else
