--- a/Views/Schedule/Edit.cshtml
+++ b/Views/Schedule/Edit.cshtml
@@ -19,9 +19,9 @@
                 <span asp-validation-for="Admin" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ScheduledUser" class="control-label"></label>
-                <input asp-for="ScheduledUser" class="form-control" />
-                <span asp-validation-for="ScheduledUser" class="text-danger"></span>
+                <label asp-for="Id" class="control-label"></label>
+                <input readonly asp-for="Id" class="form-control" />
+                <span asp-validation-for="Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Location" class="control-label"></label>
@@ -52,6 +52,9 @@
 
 <div>
     <a asp-action="Index">Back to List</a>
+</div>
+<div>
+    <a asp-action="Contact">Contact User</a>
 </div>
 
 @section Scripts {
