--- a/Views/Schedule/Edit.cshtml
+++ b/Views/Schedule/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="ScheduleID" />
             <div class="form-group">
                 <label asp-for="Admin" class="control-label"></label>
-                <input asp-for="Admin" class="form-control" />
+                <input readonly asp-for="Admin" class="form-control" />
                 <span asp-validation-for="Admin" class="text-danger"></span>
             </div>
             <div class="form-group">
