--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Schedule" asp-action="Index">Schedule List</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Schedule" asp-action="Index">user List</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
