--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Schedule" asp-action="Index">Schedule List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Schedule" asp-action="Index">user List</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Schedule" asp-action="Listusers">User List</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
